better test coverage

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,8 @@
 language: node_js
 node_js:
- - 0.10
-script: npm run coveralls
+ - "0.10"
+ - "0.12"
+ - "io.js"
+script: npm run test:coverage:check
+after_script: npm run coveralls
+sudo: false
